<project xmlns = "http://maven.apache.org/POM/4.0.0"
  xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0
  http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>me.choco</groupId>
  <artifactId>AlchemicalArrows</artifactId>
  <version>3.3.4</version>
  <name>AlchemicalArrows</name>
  <description>Arrows with alchemical properties, each performing thematic in-world effects</description>

  <properties>
    <maven.compiler.source>16</maven.compiler.source>
    <maven.compiler.target>16</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.4.0</version>
        <configuration>
          <relocations>
            <relocation>
              <pattern>org.bstats</pattern>
              <shadedPattern>wtf.choco.arrows.utils.metrics</shadedPattern>
            </relocation>
            <relocation>
              <pattern>wtf.choco.commons</pattern>
              <shadedPattern>wtf.choco.arrows.commons</shadedPattern>
            </relocation>
          </relocations>
        </configuration>
        <executions>
          <execution>
          <phase>package</phase>
          <goals>
            <goal>shade</goal>
          </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>md_5-repository</id>
      <url>https://repo.md-5.net/repository/snapshots/</url>
    </repository>
    <repository>
      <id>papermc</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>
    <repository>
      <id>worldedit-repo</id>
      <url>https://maven.enginehub.org/repo/</url>
    </repository>
    <repository>
      <id>bstats-repo</id>
      <url>https://repo.codemc.org/repository/maven-public</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>dev.folia</groupId>
      <artifactId>folia-api</artifactId>
      <version>1.20.1-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>23.0.0</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.bstats</groupId>
      <artifactId>bstats-bukkit</artifactId>
      <version>3.0.0</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>com.github.2008Choco</groupId>
      <artifactId>ChocoCommons</artifactId>
      <version>e1b4cc4129</version>
      <scope>compile</scope>
    </dependency>

    <!-- Plugin dependencies -->
    <dependency>
      <groupId>com.sk89q.worldguard</groupId>
      <artifactId>worldguard-bukkit</artifactId>
      <version>7.0.8-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>wtf.choco</groupId>
      <artifactId>Alchema</artifactId>
      <version>1.4.0-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
</project>